# RAG-Chatbot-using-LangChain-OpenAI-and-ChromaDB

./: README.md  app.py  chatbot.py  ingest_data.py  pyproject.toml  requirements.txt
